name:                 haddock
version:              2.14.4
synopsis:             A documentation-generation tool for Haskell libraries
description:          Haddock is a documentation-generation tool for Haskell
                      libraries
license:              BSD3
license-file:         LICENSE
author:               Simon Marlow, David Waern
maintainer:           Simon Hengel <sol@typeful.net>, Mateusz Kowalczyk <fuuzetsu@fuuzetsu.co.uk>
homepage:             http://www.haskell.org/haddock/
bug-reports:          https://github.com/haskell/haddock/issues
copyright:            (c) Simon Marlow, David Waern
category:             Documentation
build-type:           Simple
cabal-version:        >= 1.10
stability:            experimental

executable haddock
  default-language:     Haskell2010
  main-is:              Main.hs
  hs-source-dirs:       driver
  ghc-options:          -Wall -fwarn-tabs

  build-depends:
    base                >= 4.3 && < 4.8,
    haddock-api         == 2.14.4

-- This package re-exports the haddock-api library for compatibility.
-- The library section will be removed in version 2.15.
library
  exposed:              False
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall -fwarn-tabs
  build-depends:        base >= 4.3 && < 4.8, haddock-api == 2.14.4
  exposed-modules:      Documentation.Haddock

