cabal-version:      3.0
name:               haddock-library
version:            2.27.0
synopsis:           Library exposing some functionality of Haddock.
description:
  Haddock is a documentation-generation tool for Haskell
  libraries. These modules expose some
  functionality of it without pulling in the GHC
  dependency. Please note that the API is likely
  to change so be sure to specify upper bounds in
  your projects. For interacting with Haddock
  itself, see the [haddock package](https://hackage.haskell.org/package/haddock).

license:            BSD-2-Clause
license-file:       LICENSE
maintainer:         Hécate Moonlight <hecate+github@glitchbra.in>
homepage:           http://www.haskell.org/haddock/
bug-reports:        https://github.com/haskell/haddock/issues
category:           Documentation
tested-with:
  GHC ==7.4.2
   || ==7.6.3
   || ==7.8.4
   || ==7.10.3
   || ==8.0.2
   || ==8.2.2
   || ==8.4.4
   || ==8.6.5
   || ==8.8.3
   || ==8.10.7
   || ==9.0.2
   || ==9.2.3

extra-source-files:
  CHANGES.md
  fixtures/examples/*.input
  fixtures/examples/*.parsed

common lib-defaults
  default-language: Haskell2010
  build-depends:
    , base        >=4.5      && <4.18
    , bytestring  ^>=0.9.2.1 || ^>=0.10.0.0 || ^>=0.11.0.0
    , containers  ^>=0.4.2.1 || ^>=0.5.0.0 || ^>=0.6.0.1
    , parsec      ^>=3.1.13.0
    , text        ^>=1.2.3.0 || ^>=2.0

  ghc-options:      -funbox-strict-fields -Wall

  if impl(ghc >=8.0)
    ghc-options: -Wcompat -Wnoncanonical-monad-instances

library
  import:          lib-defaults
  hs-source-dirs:  src
  exposed-modules:
    Documentation.Haddock.Doc
    Documentation.Haddock.Markup
    Documentation.Haddock.Parser
    Documentation.Haddock.Types

  other-modules:
    CompatPrelude
    Documentation.Haddock.Parser.Identifier
    Documentation.Haddock.Parser.Monad
    Documentation.Haddock.Parser.Util

test-suite spec
  import:             lib-defaults
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test src
  other-modules:
    CompatPrelude
    Documentation.Haddock.Doc
    Documentation.Haddock.Markup
    Documentation.Haddock.Parser
    Documentation.Haddock.Parser.Identifier
    Documentation.Haddock.Parser.Monad
    Documentation.Haddock.Parser.Util
    Documentation.Haddock.Parser.UtilSpec
    Documentation.Haddock.ParserSpec
    Documentation.Haddock.Types

  build-depends:
    , base-compat  ^>=0.12.0
    , deepseq      ^>=1.3.0.0 || ^>=1.4.0.0
    , QuickCheck   >=2.11    && <2.12 || >=2.13.2 && <2.15

  -- NB: build-depends & build-tool-depends have independent
  --     install-plans, so it's best to limit to a single major
  --     version of `hspec` & `hspec-discover` to ensure
  --     intercompatibility
  build-depends:      hspec ^>=2.10
  build-tool-depends: hspec-discover:hspec-discover ^>=2.10

test-suite fixtures
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  main-is:          Fixtures.hs
  ghc-options:      -Wall
  hs-source-dirs:   fixtures
  build-depends:
    , base
    , base-compat           ^>=0.12.0
    , directory             ^>=1.3.0.2
    , filepath              ^>=1.4.1.2
    , haddock-library
    , optparse-applicative  ^>=0.15
    , tree-diff             ^>=0.2

-- intra-package dependency
-- constraints inherited via lib:haddock-library component
-- extra dependencies
source-repository head
  type:     git
  subdir:   haddock-library
  location: https://github.com/haskell/haddock.git
